[gd_scene load_steps=61 format=3 uid="uid://2pgpfm8j72mu"]

[ext_resource type="Script" path="res://ec_assets/scenes/main.gd" id="1"]
[ext_resource type="Material" uid="uid://d0gel3gux24hq" path="res://ec_assets/additive.tres" id="2"]
[ext_resource type="Texture2D" uid="uid://d2hpxx50pjljv" path="res://ec_assets/textures/items/earth2.png" id="3"]
[ext_resource type="Texture2D" uid="uid://d02cq0myp1k3f" path="res://ec_assets/textures/backgrounds/moon_terrain.png" id="4"]
[ext_resource type="Texture2D" uid="uid://bqwcebnbjx7hd" path="res://ec_assets/textures/backgrounds/moon_ground.png" id="5"]
[ext_resource type="Texture2D" uid="uid://bt3cv6nsjgyv6" path="res://ec_assets/textures/backgrounds/catseye-neb.png" id="6"]
[ext_resource type="Texture2D" uid="uid://dvqhiogsgnrvu" path="res://ec_assets/textures/backgrounds/catseye-wave.png" id="7"]
[ext_resource type="Texture2D" uid="uid://n04s8a81j0tc" path="res://ec_assets/textures/effects/star0.png" id="8"]
[ext_resource type="Texture2D" uid="uid://ct7xuboqmghm7" path="res://ec_assets/textures/effects/zoomcloud0.png" id="9"]
[ext_resource type="Texture2D" uid="uid://b45q3m32gfsaq" path="res://ec_assets/textures/backgrounds/metalwall.png" id="10"]
[ext_resource type="Texture2D" uid="uid://cmbnwp1uw18e8" path="res://ec_assets/xmas_art/1ketheboss_merryxmas.png" id="11"]
[ext_resource type="FontFile" uid="uid://cfesmi0gujs0b" path="res://ec_assets/fonts/CENTURY.TTF" id="12"]
[ext_resource type="Texture2D" uid="uid://cthi4ajr2ytjp" path="res://ec_assets/xmas_art/ckb_nak.png" id="13"]
[ext_resource type="Texture2D" uid="uid://bpikp6oexcaax" path="res://ec_assets/xmas_art/inky_primexmas.png" id="14"]
[ext_resource type="Texture2D" uid="uid://b35ka8rlk7vc0" path="res://ec_assets/xmas_art/beehive3465_happyholidays.jpg" id="15"]
[ext_resource type="Texture2D" uid="uid://bprfq3tsncog6" path="res://ec_assets/xmas_art/megamawilite_arsecoal-cens.png" id="16"]
[ext_resource type="Texture2D" uid="uid://dnu067n30do00" path="res://ec_assets/xmas_art/oxygendox_sponch.png" id="17"]
[ext_resource type="Texture2D" uid="uid://v6v487y4oajw" path="res://ec_assets/xmas_art/ritatastic_halogens.png" id="18"]
[ext_resource type="Texture2D" uid="uid://s0kwgpyquy2t" path="res://ec_assets/xmas_art/saturn_cesiumtree.png" id="19"]
[ext_resource type="Texture2D" uid="uid://cex40j3k2iddg" path="res://ec_assets/xmas_art/senchent_everyone.JPG" id="20"]
[ext_resource type="Texture2D" uid="uid://cd4sknumo7ara" path="res://ec_assets/xmas_art/ticktock_meltedjaw.png" id="21"]
[ext_resource type="Texture2D" uid="uid://dnhn3yk6gnsd7" path="res://ec_assets/xmas_art/triton_osmiumplatinum.png" id="22"]
[ext_resource type="Texture2D" uid="uid://bbteny68ynl3x" path="res://ec_assets/xmas_art/triton_carbonmonoxide.png" id="23"]
[ext_resource type="Texture2D" uid="uid://pa6fxy1jae2l" path="res://ec_assets/xmas_art/triton_berkelium.png" id="24"]
[ext_resource type="Texture2D" uid="uid://0tj1kkdmht1a" path="res://ec_assets/xmas_art/audiovox_oganessontennessine.jpg" id="25"]
[ext_resource type="Texture2D" uid="uid://dmmieth003ji0" path="res://ec_assets/textures/ui/tutorial_catto.png" id="26"]
[ext_resource type="Texture2D" uid="uid://dw0uj0y4flamx" path="res://ec_assets/textures/ui/tutorial_table.png" id="27"]
[ext_resource type="PackedScene" uid="uid://cc5lnxjqdlpj" path="res://ec_assets/scenes/camera.tscn" id="28"]
[ext_resource type="Script" path="res://ec_assets/scenes/music.gd" id="29"]
[ext_resource type="AudioStream" uid="uid://ck0t7g13a34ny" path="res://ec_assets/music/Vibe Ace.mp3" id="30"]
[ext_resource type="Script" path="res://ec_assets/scenes/music_track.gd" id="31"]
[ext_resource type="AudioStream" uid="uid://dh6p2xs3ex0i8" path="res://ec_assets/music/Bathed in the Light.mp3" id="32"]
[ext_resource type="AudioStream" uid="uid://durqlh2j82dw3" path="res://ec_assets/music/Pamgaea.mp3" id="33"]
[ext_resource type="AudioStream" uid="uid://puccjqhqogd8" path="res://ec_assets/music/Frozen Star.mp3" id="34"]
[ext_resource type="AudioStream" uid="uid://btsxqpktvj2pe" path="res://ec_assets/music/How it Begins.mp3" id="35"]
[ext_resource type="AudioStream" uid="uid://5ebg318ykj68" path="res://ec_assets/music/MeowersOfTen.mp3" id="36"]
[ext_resource type="AudioStream" uid="uid://cfc735y4xtjjs" path="res://ec_assets/sounds/burning1.wav" id="37"]

[sub_resource type="Gradient" id="Gradient_6bmi1"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_w6njf"]
gradient = SubResource("Gradient_6bmi1")

[sub_resource type="Gradient" id="Gradient_ckr22"]
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_egruk"]
gradient = SubResource("Gradient_ckr22")
width = 5
height = 5
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.5, 0)
metadata/_snap_enabled = true

[sub_resource type="Gradient" id="Gradient_2eqy1"]
offsets = PackedFloat32Array(0, 0.5, 1)
colors = PackedColorArray(0, 0, 0, 0, 1, 1, 1, 1, 0, 0, 0, 0)

[sub_resource type="Gradient" id="Gradient_mtdnv"]
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_mny0v"]
gradient = SubResource("Gradient_mtdnv")
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.5, 0)
metadata/_snap_enabled = true

[sub_resource type="Gradient" id="Gradient_q8s72"]
colors = PackedColorArray(0, 0, 0, 0, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_sclsh"]
gradient = SubResource("Gradient_q8s72")
width = 400
height = 5
fill = 1
fill_from = Vector2(0.5, 0)
metadata/_snap_enabled = true

[sub_resource type="Curve" id="Curve_6k2jl"]
_data = [Vector2(0, 0.5), 0.0, 0.5, 0, 1, Vector2(1, 1), 0.5, 0.0, 1, 0]
point_count = 2
metadata/_snap_enabled = true

[sub_resource type="Gradient" id="Gradient_00at2"]
offsets = PackedFloat32Array(0, 0.5, 1)
colors = PackedColorArray(0, 0, 0, 0, 1, 1, 1, 1, 0, 0, 0, 0)

[sub_resource type="Gradient" id="Gradient_cen8k"]
offsets = PackedFloat32Array(0, 0.4, 0.5, 1)
colors = PackedColorArray(0.501961, 0.752941, 1, 1, 1, 1, 1, 1, 0.501961, 0.501961, 0.501961, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_w0mlx"]
gradient = SubResource("Gradient_cen8k")
width = 100
height = 100
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.5, 0)
metadata/_snap_enabled = true

[sub_resource type="Curve" id="Curve_oxbkn"]
_data = [Vector2(0, 0.1), 0.0, 0.9, 0, 1, Vector2(1, 1), 0.9, 0.0, 1, 0]
point_count = 2
metadata/_snap_enabled = true

[sub_resource type="Gradient" id="Gradient_fv4en"]
offsets = PackedFloat32Array(0, 0.5, 1)
colors = PackedColorArray(0, 0, 0, 0, 1, 1, 1, 1, 0, 0, 0, 0)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_32sdk"]
noise_type = 0
fractal_octaves = 4

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_non60"]
width = 625
height = 256
in_3d_space = true
generate_mipmaps = false
normalize = false
noise = SubResource("FastNoiseLite_32sdk")

[sub_resource type="Animation" id="Animation_cgkvb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.501961, 0.752941, 1, 0.12549)]
}

[sub_resource type="Animation" id="Animation_telcx"]
resource_name = "heat"
length = 3.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0.12549), Color(0.501961, 0.752941, 1, 0.12549), Color(1, 0, 0, 0.12549), Color(1, 0.752941, 0.501961, 0.12549), Color(0.501961, 1, 1, 0.12549), Color(1, 0.501961, 1, 0.12549)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vwokr"]
_data = {
"RESET": SubResource("Animation_cgkvb"),
"heat": SubResource("Animation_telcx")
}

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_g8qqm"]

[sub_resource type="Gradient" id="Gradient_7ab6f"]
offsets = PackedFloat32Array(0.9, 1)
colors = PackedColorArray(0, 0, 0, 0, 1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_mgsi3"]
gradient = SubResource("Gradient_7ab6f")
width = 625
height = 256
fill = 2
fill_from = Vector2(0.5, 0.5)
metadata/_snap_enabled = true

[node name="main" type="Node2D"]
script = ExtResource("1")

[node name="bg" type="Node2D" parent="."]
z_index = -20
texture_filter = 2

[node name="moon" type="Node2D" parent="bg"]
visible = false

[node name="space" type="Sprite2D" parent="bg/moon"]
scale = Vector2(1000, 1000)
texture = SubResource("GradientTexture2D_w6njf")

[node name="stars" type="CPUParticles2D" parent="bg/moon"]
material = ExtResource("2")
position = Vector2(0, -128)
scale = Vector2(10, 10)
amount = 500
lifetime = 5.0
preprocess = 10.0
local_coords = true
texture = SubResource("GradientTexture2D_egruk")
emission_shape = 1
emission_sphere_radius = 128.0
gravity = Vector2(0, 0)
scale_amount_min = 0.0
scale_amount_max = 0.2
color_ramp = SubResource("Gradient_2eqy1")

[node name="earth" type="Sprite2D" parent="bg/moon"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("3")
offset = Vector2(-500, -250)

[node name="glow" type="Sprite2D" parent="bg/moon/earth"]
modulate = Color(0, 0.501961, 1, 1)
show_behind_parent = true
material = ExtResource("2")
position = Vector2(-500, -250)
scale = Vector2(15, 15)
texture = SubResource("GradientTexture2D_mny0v")

[node name="terrain" type="Sprite2D" parent="bg/moon"]
texture_repeat = 2
texture = ExtResource("4")
offset = Vector2(0, -25)
region_enabled = true
region_rect = Rect2(0, 2, 30000, 98)

[node name="ground" type="Sprite2D" parent="bg/moon"]
texture_repeat = 2
texture = ExtResource("5")
offset = Vector2(0, 100)
region_enabled = true
region_rect = Rect2(0, 0, 30000, 200)

[node name="dark" type="Sprite2D" parent="bg/moon"]
scale = Vector2(75, 75)
texture = SubResource("GradientTexture2D_sclsh")
offset = Vector2(0, 2.5)

[node name="black" type="Sprite2D" parent="bg/moon"]
position = Vector2(0, 200)
scale = Vector2(3000, 3000)
texture = SubResource("GradientTexture2D_w6njf")
offset = Vector2(0, 32)

[node name="space" type="Node2D" parent="bg"]
visible = false

[node name="space" type="Sprite2D" parent="bg/space"]
scale = Vector2(1000, 1000)
texture = SubResource("GradientTexture2D_w6njf")

[node name="nebula" type="Sprite2D" parent="bg/space"]
self_modulate = Color(1, 0.752941, 1, 0.501961)
position = Vector2(0, -128)
scale = Vector2(10, 10)
texture = ExtResource("6")

[node name="waves" type="CPUParticles2D" parent="bg/space/nebula"]
material = ExtResource("2")
lifetime = 10.0
local_coords = true
texture = ExtResource("7")
gravity = Vector2(0, 0)
angle_max = 720.0
scale_amount_max = 2.0
scale_amount_curve = SubResource("Curve_6k2jl")
color = Color(1, 0.752941, 1, 0.501961)
color_ramp = SubResource("Gradient_00at2")

[node name="star" type="Sprite2D" parent="bg/space/nebula"]
material = ExtResource("2")
scale = Vector2(0.1, 0.1)
texture = ExtResource("8")

[node name="stars" type="CPUParticles2D" parent="bg/space"]
material = ExtResource("2")
position = Vector2(0, -128)
scale = Vector2(10, 10)
amount = 500
lifetime = 5.0
preprocess = 10.0
local_coords = true
texture = SubResource("GradientTexture2D_egruk")
emission_shape = 1
emission_sphere_radius = 128.0
gravity = Vector2(0, 0)
scale_amount_min = 0.0
scale_amount_max = 0.2
color_ramp = SubResource("Gradient_2eqy1")

[node name="sun" type="Node2D" parent="bg"]
visible = false

[node name="space" type="Sprite2D" parent="bg/sun"]
scale = Vector2(1000, 1000)
texture = SubResource("GradientTexture2D_w6njf")

[node name="sun" type="Sprite2D" parent="bg/sun"]
scale = Vector2(500, 500)
texture = SubResource("GradientTexture2D_w0mlx")

[node name="plasma" type="CPUParticles2D" parent="bg/sun"]
material = ExtResource("2")
scale = Vector2(25, 25)
local_coords = true
texture = ExtResource("9")
gravity = Vector2(0, 0)
angle_max = 720.0
scale_amount_curve = SubResource("Curve_oxbkn")
color = Color(0.25098, 0.501961, 1, 1)
color_ramp = SubResource("Gradient_fv4en")

[node name="air" type="Sprite2D" parent="."]
modulate = Color(0.501961, 0.752941, 1, 0.12549)
z_index = -9
texture_filter = 2
material = ExtResource("2")
position = Vector2(0, -1024)
rotation = 3.14159
scale = Vector2(8, 8)
texture = SubResource("NoiseTexture2D_non60")

[node name="heat" type="AnimationPlayer" parent="air"]
autoplay = "heat"
playback_process_mode = 2
libraries = {
"": SubResource("AnimationLibrary_vwokr")
}

[node name="floor" type="StaticBody2D" parent="."]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="floor"]
shape = SubResource("WorldBoundaryShape2D_g8qqm")

[node name="ceiling" type="StaticBody2D" parent="."]
position = Vector2(0, -2048)
rotation = 3.14159
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="ceiling"]
shape = SubResource("WorldBoundaryShape2D_g8qqm")

[node name="walls" type="StaticBody2D" parent="."]
position = Vector2(0, -1024)
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="walls"]
position = Vector2(2500, 0)
rotation = -1.5708
shape = SubResource("WorldBoundaryShape2D_g8qqm")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="walls"]
position = Vector2(-2500, 0)
rotation = 1.5708
shape = SubResource("WorldBoundaryShape2D_g8qqm")

[node name="opaque" type="Sprite2D" parent="walls"]
self_modulate = Color(0.627451, 0.627451, 0.627451, 1)
z_index = -10
texture_filter = 2
texture_repeat = 2
scale = Vector2(4, 4)
texture = ExtResource("10")
region_enabled = true
region_rect = Rect2(0, 0, 1250, 512)

[node name="xmas_art" type="Node2D" parent="walls/opaque"]
scale = Vector2(0.25, 0.25)

[node name="1" type="Sprite2D" parent="walls/opaque/xmas_art"]
position = Vector2(-768, 768)
scale = Vector2(0.5, 0.5)
texture = ExtResource("11")

[node name="Label" type="Label" parent="walls/opaque/xmas_art/1"]
offset_left = -128.0
offset_top = -400.0
offset_right = 640.0
offset_bottom = -304.0
theme_override_fonts/font = ExtResource("12")
theme_override_font_sizes/font_size = 64
text = "1ketheboss"
horizontal_alignment = 2

[node name="2" type="Sprite2D" parent="walls/opaque/xmas_art"]
position = Vector2(-160, 424)
scale = Vector2(0.25, 0.25)
texture = ExtResource("13")

[node name="Label" type="Label" parent="walls/opaque/xmas_art/2"]
modulate = Color(0, 0, 0, 1)
offset_left = 96.0
offset_top = -576.0
offset_right = 864.0
offset_bottom = -480.0
theme_override_fonts/font = ExtResource("12")
theme_override_font_sizes/font_size = 64
text = "CKB"
horizontal_alignment = 2

[node name="3" type="Sprite2D" parent="walls/opaque/xmas_art"]
position = Vector2(584, 768)
texture = ExtResource("14")

[node name="Label" type="Label" parent="walls/opaque/xmas_art/3"]
modulate = Color(0, 0, 0, 1)
offset_left = -520.0
offset_top = -200.0
offset_right = 248.0
offset_bottom = -104.0
theme_override_fonts/font = ExtResource("12")
theme_override_font_sizes/font_size = 32
text = "Inky"
horizontal_alignment = 2

[node name="4" type="Sprite2D" parent="walls/opaque/xmas_art"]
position = Vector2(1280, 512)
scale = Vector2(0.25, 0.25)
texture = ExtResource("15")

[node name="Label" type="Label" parent="walls/opaque/xmas_art/4"]
offset_left = -512.0
offset_top = -1760.0
offset_right = 512.0
offset_bottom = -1536.0
theme_override_fonts/font = ExtResource("12")
theme_override_font_sizes/font_size = 128
text = "beehive3465"
horizontal_alignment = 1

[node name="5" type="Sprite2D" parent="walls/opaque/xmas_art"]
position = Vector2(512, 320)
texture = ExtResource("16")

[node name="Label" type="Label" parent="walls/opaque/xmas_art/5"]
modulate = Color(0, 0, 0, 1)
offset_left = -408.0
offset_top = 152.0
offset_right = 360.0
offset_bottom = 248.0
theme_override_fonts/font = ExtResource("12")
theme_override_font_sizes/font_size = 32
text = "Mawilite"
horizontal_alignment = 2

[node name="6" type="Sprite2D" parent="walls/opaque/xmas_art"]
position = Vector2(-640, 384)
scale = Vector2(0.5, 0.5)
texture = ExtResource("17")

[node name="Label" type="Label" parent="walls/opaque/xmas_art/6"]
modulate = Color(0, 0, 0, 1)
offset_left = -384.0
offset_top = 256.0
offset_right = 384.0
offset_bottom = 352.0
theme_override_fonts/font = ExtResource("12")
theme_override_font_sizes/font_size = 32
text = "Oxygendox"

[node name="7" type="Sprite2D" parent="walls/opaque/xmas_art"]
position = Vector2(-160, -32)
scale = Vector2(0.25, 0.25)
texture = ExtResource("18")

[node name="Label" type="Label" parent="walls/opaque/xmas_art/7"]
modulate = Color(0, 0, 0, 1)
offset_left = -704.0
offset_top = 864.0
offset_right = 64.0
offset_bottom = 964.0
theme_override_fonts/font = ExtResource("12")
theme_override_font_sizes/font_size = 80
text = "Ritatastic"

[node name="8" type="Sprite2D" parent="walls/opaque/xmas_art"]
position = Vector2(-1120, 288)
scale = Vector2(0.5, 0.5)
texture = ExtResource("19")

[node name="Label" type="Label" parent="walls/opaque/xmas_art/8"]
offset_left = -416.0
offset_top = 320.0
offset_right = 352.0
offset_bottom = 420.0
theme_override_fonts/font = ExtResource("12")
theme_override_font_sizes/font_size = 64
text = "Saturn"

[node name="9" type="Sprite2D" parent="walls/opaque/xmas_art"]
position = Vector2(720, -392)
scale = Vector2(0.5, 0.5)
texture = ExtResource("20")

[node name="Label" type="Label" parent="walls/opaque/xmas_art/9"]
offset_left = -1200.0
offset_top = -944.0
offset_right = -432.0
offset_bottom = -844.0
theme_override_fonts/font = ExtResource("12")
theme_override_font_sizes/font_size = 80
text = "Senchent 2ndary"

[node name="10" type="Sprite2D" parent="walls/opaque/xmas_art"]
position = Vector2(-624, -24)
scale = Vector2(0.1, 0.1)
texture = ExtResource("21")

[node name="Label" type="Label" parent="walls/opaque/xmas_art/10"]
modulate = Color(0, 0, 0, 1)
offset_left = -2000.0
offset_top = -2000.0
offset_right = -1232.0
offset_bottom = -1842.0
theme_override_fonts/font = ExtResource("12")
theme_override_font_sizes/font_size = 192
text = "Ticktock"

[node name="11" type="Sprite2D" parent="walls/opaque/xmas_art"]
position = Vector2(-1320, 736)
texture = ExtResource("22")

[node name="Label" type="Label" parent="walls/opaque/xmas_art/11"]
modulate = Color(0, 0, 0, 1)
offset_left = -192.0
offset_top = -192.0
offset_right = 576.0
offset_bottom = 43.0
theme_override_fonts/font = ExtResource("12")
theme_override_font_sizes/font_size = 32
text = "Triton"

[node name="12" type="Sprite2D" parent="walls/opaque/xmas_art"]
position = Vector2(-1072, -136)
texture = ExtResource("23")

[node name="Label" type="Label" parent="walls/opaque/xmas_art/12"]
modulate = Color(0, 0, 0, 1)
offset_left = -160.0
offset_top = -160.0
offset_right = 608.0
offset_bottom = 75.0
theme_override_fonts/font = ExtResource("12")
theme_override_font_sizes/font_size = 32
text = "Triton"

[node name="13" type="Sprite2D" parent="walls/opaque/xmas_art"]
position = Vector2(-832, -576)
texture = ExtResource("24")

[node name="Label" type="Label" parent="walls/opaque/xmas_art/13"]
offset_left = -184.0
offset_top = -192.0
offset_right = 584.0
offset_bottom = 43.0
theme_override_fonts/font = ExtResource("12")
theme_override_font_sizes/font_size = 32
text = "Triton"

[node name="Label2" type="Label" parent="walls/opaque/xmas_art/13"]
modulate = Color(0, 0, 0, 1)
offset_left = -200.0
offset_top = 200.0
offset_right = 568.0
offset_bottom = 435.0
theme_override_fonts/font = ExtResource("12")
theme_override_font_sizes/font_size = 16
text = "(this one isn't really Xmas-themed but it was the
first submission to the art competition so :P)"

[node name="14" type="Sprite2D" parent="walls/opaque/xmas_art"]
position = Vector2(-256, -512)
scale = Vector2(0.5, 0.5)
texture = ExtResource("25")

[node name="Label" type="Label" parent="walls/opaque/xmas_art/14"]
modulate = Color(0, 0, 0, 1)
offset_left = -144.0
offset_top = -352.0
offset_right = 624.0
offset_bottom = -117.0
theme_override_fonts/font = ExtResource("12")
theme_override_font_sizes/font_size = 64
text = "Audiovox Vod10PS2"
horizontal_alignment = 2

[node name="xmasart" type="Button" parent="walls/opaque"]
offset_left = -96.0
offset_top = 154.0
offset_right = 24.0
offset_bottom = 185.0
scale = Vector2(0.4, 0.4)
text = "Xmas art on"

[node name="Sprite" type="Sprite2D" parent="walls"]
modulate = Color(1, 1, 1, 0.12549)
z_index = -10
texture_filter = 2
material = ExtResource("2")
scale = Vector2(8, 8)
texture = SubResource("GradientTexture2D_mgsi3")

[node name="hint" type="Node2D" parent="."]
texture_filter = 2
position = Vector2(0, -128)

[node name="Label" type="Label" parent="hint"]
offset_left = -192.0
offset_top = -128.0
offset_right = 192.0
offset_bottom = 128.0
theme_override_fonts/font = ExtResource("12")
text = "Middle/Right mouse button to drag the camera
Scroll to zoom
Space to open/close the periodic table
Esc to open/close settings
R to reset the scene"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ok" type="Button" parent="hint"]
offset_left = -64.0
offset_top = 64.0
offset_right = 64.0
offset_bottom = 96.0
text = "OK"

[node name="catto" type="Sprite2D" parent="hint"]
self_modulate = Color(1, 1, 1, 0.501961)
material = ExtResource("2")
position = Vector2(-280, 33)
scale = Vector2(0.5, 0.5)
texture = ExtResource("26")

[node name="table" type="Sprite2D" parent="hint"]
self_modulate = Color(1, 1, 1, 0.501961)
material = ExtResource("2")
position = Vector2(0, -200)
scale = Vector2(0.5, 0.5)
texture = ExtResource("27")

[node name="camera" parent="." instance=ExtResource("28")]
position = Vector2(0, -128)

[node name="music" type="Node" parent="."]
process_mode = 3
script = ExtResource("29")

[node name="a" type="AudioStreamPlayer" parent="music"]
stream = ExtResource("30")
autoplay = true
script = ExtResource("31")

[node name="b" type="AudioStreamPlayer" parent="music"]
stream = ExtResource("32")
volume_db = -5.0
script = ExtResource("31")

[node name="c" type="AudioStreamPlayer" parent="music"]
stream = ExtResource("33")
volume_db = -5.0
script = ExtResource("31")

[node name="d" type="AudioStreamPlayer" parent="music"]
stream = ExtResource("34")
script = ExtResource("31")

[node name="e" type="AudioStreamPlayer" parent="music"]
stream = ExtResource("35")
script = ExtResource("31")

[node name="f" type="AudioStreamPlayer" parent="music"]
stream = ExtResource("36")
script = ExtResource("31")

[node name="rumble" type="AudioStreamPlayer" parent="."]
stream = ExtResource("37")
volume_db = -5.0
pitch_scale = 0.3

[connection signal="pressed" from="walls/opaque/xmasart" to="." method="_on_xmasart_pressed" flags=19]
[connection signal="pressed" from="hint/ok" to="." method="_on_ok_pressed" flags=19]
[connection signal="finished" from="music/a" to="music" method="_on_track_finished" flags=19]
[connection signal="finished" from="music/b" to="music" method="_on_track_finished" flags=19]
[connection signal="finished" from="music/c" to="music" method="_on_track_finished" flags=19]
[connection signal="finished" from="music/d" to="music" method="_on_track_finished" flags=19]
[connection signal="finished" from="music/e" to="music" method="_on_track_finished" flags=19]
[connection signal="finished" from="music/f" to="music" method="_on_track_finished" flags=19]
